Added links to footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   </head>
   <body>
     <h1>Welcome to Tee's Weather App!👋</h1>
-    <footer>Page Built by Tee Acheam</footer>
+    <footer>
+      Page Built by
+      <a href="https://github.com/TeeL18?tab=repositories" target="_blank">
+        Tee Acheam </a
+      >, code is hosted on
+      <a href="https://github.com/TeeL18/Weather-Project" target="_blank">
+        GitHub</a
+      >, and website is hosted
+      <a href="https://tees-weather-app.netlify.app/" target="_blank">
+        on Netlify</a
+      >
+    </footer>
   </body>
 </html>
