Added HTML to the project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
     <title>Tee's Weather App</title>
   </head>
   <body>
-    <h1>Welcome to Tee's Weather App!👋</h1>
+    <header>
+      <form>
+        <input type="Search" placeholder="Enter a city..." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Paris</h1>
+        <p>
+          Tuesday 14:49, scattered clouds
+          <br />
+          Humidity: 66%, wind: 3.13km/h
+        </p>
+        <div>⛅ 15°C</div>
+      </div>
+    </main>
     <footer>
       Page Built by
       <a href="https://github.com/TeeL18?tab=repositories" target="_blank">
