--- a/index.html
+++ b/index.html
@@ -3,37 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Tee's Weather App</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="Search" placeholder="Enter a city..." required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Paris</h1>
-        <p>
-          Tuesday 14:49, scattered clouds
-          <br />
-          Humidity: 66%, wind: 3.13km/h
-        </p>
-        <div>⛅ 15°C</div>
-      </div>
-    </main>
-    <footer>
-      Page Built by
-      <a href="https://github.com/TeeL18?tab=repositories" target="_blank">
-        Tee Acheam </a
-      >, code is hosted on
-      <a href="https://github.com/TeeL18/Weather-Project" target="_blank">
-        GitHub</a
-      >, and website is hosted
-      <a href="https://tees-weather-app.netlify.app/" target="_blank">
-        on Netlify</a
-      >
-    </footer>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="Search" placeholder="Enter a city..." required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Paris</h1>
+          <p>
+            Tuesday 14:49, scattered clouds
+            <br />
+            Humidity: 66%, wind: 3.13km/h
+          </p>
+          <div>⛅ 15°C</div>
+        </div>
+      </main>
+      <footer>
+        Page Built by
+        <a href="https://github.com/TeeL18?tab=repositories" target="_blank">
+          Tee Acheam </a
+        >, code is hosted on
+        <a href="https://github.com/TeeL18/Weather-Project" target="_blank">
+          GitHub</a
+        >, and website is hosted
+        <a href="https://tees-weather-app.netlify.app/" target="_blank">
+          on Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
